--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "devel": "set NODE_ENV=dev && nodemon --exec ts-node -r tsconfig-paths/register ./src/index.ts",
+    "start": "npm run build && node ./dist/index.js",
+    "mock-server": "cross-env PORT=8080 ts-node ./src/mockServer.ts",
+    "devel": "concurrently \"cross-env NODE_ENV=dev nodemon --exec ts-node -r tsconfig-paths/register ./src/index.ts\" \"cross-env NODE_ENV=dev nodemon --exec ts-node -r tsconfig-paths/register ./src/mockServer.ts\"",
     "test": "mocha --timeout 30000 --exit -r ts-node/register -r tsconfig-paths/register src/test/**/*.test.ts",
     "coverage": "nyc npm run test",
-    "start": "npm run build && node ./dist/index.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "nyc": {
@@ -39,6 +40,8 @@
     "@typescript-eslint/eslint-plugin": "5.59.0",
     "@typescript-eslint/parser": "5.59.0",
     "chai": "4.3.7",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "json-server": "^1.0.0-beta.0",
