--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "src": "dist"
   },
   "dependencies": {
+    "amqplib": "^0.10.4",
     "axios": "^1.7.2",
     "chai-http": "4.3.0",
     "express": "^4.19.2",
@@ -31,6 +32,7 @@
     "mongoose": "^7.6.12"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/chai": "4.3.5",
     "@types/express": "^4.17.21",
     "@types/mocha": "10.0.1",
